crates/carta/tests/snapshots/golden_writer__docbook__image-dimensions__image-inline-dims.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<para>
  text <inlinemediaobject>
    <imageobject>
      <imagedata fileref="pic.png" width="200px" />
    </imageobject>
    <textobject>
      <phrase>alt</phrase>
    </textobject>
  </inlinemediaobject> more
</para>
